hphp/hack/test/fanout/modules/module-change-class-membership.php.saved_state.exp
=== base errors ===
No errors!
=== changed errors ===
bing.php:5:26,31: Cannot access an internal element from module `B` in module `A` (Typing[4444])
  foobar.php:5:7,12: This is from module `B`
=== fanout ===
Type Bing
Type Foobar
